--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="15dp"
     android:orientation="vertical"
     android:background="#FFF">
 
@@ -66,7 +67,7 @@
             android:text="@string/save"
             android:textStyle="bold" />
     </LinearLayout>
-    <TextView
+    <Button
         android:id="@+id/chartslack"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
